feat: point to the right tailwind css path

--- a/views/layout/base.templ
+++ b/views/layout/base.templ
@@ -7,7 +7,7 @@ templ Base(title string) {
 			<meta charset="UTF-8"/>
 			<title>{ title }</title>
 			<!-- tailwind css -->
-			<link href="/static/css/tailwind.css" rel="stylesheet"/>
+			<link href="/public/css/tailwind.css" rel="stylesheet"/>
 			<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet"/>
 		</head>
 		<body>
